[project]
name = "pyleco"
version = "0.0.1.dev"
authors = [
  { name="PyLECO Developers" },
]
description = "Python reference implementation of the Laboratory Experiment COntrol (LECO) protocol"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning",
]

requires-python = ">=3.10"
dependencies = [
  "pyzmq >= 22.3.0",
  "openrpc >= 8.1.0",
  "jsonrpc2-pyclient >= 4.3.0",
  "jsonrpc2-objects >= 3.0.0",
  "uuid7 >= 0.1.0",
]

[project.optional-dependencies]
dev = [
  'pytest',
  'pytest-cov',
  'sphinx',
  'sphinx_rtd_theme',
]

[project.urls]
"Homepage" = "https://github.com/pymeasure/pyleco"
"Bug Tracker" = "https://github.com/pymeasure/pyleco/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm>=7.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# write_to = "pyleco/_version.py"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
select = ["E", "F", "W"]
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pypackages__",
    "__pycache__",
    "build",
    "dist",
    "docs/conf.py",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[mypy]

[tool.coverage.run]
branch = true
omit = [
    # Omit LECO definitions
    "pyleco/errors.py",
    "pyleco/core/leco_protocols.py",
]
