[project]
name = "pyleco"
authors = [
  { name="PyLECO Developers" },
]
dynamic = ["version"]

description = "Python reference implementation of the Laboratory Experiment COntrol (LECO) protocol"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Networking",
]

requires-python = ">=3.8"
dependencies = [
  "pyzmq >= 22.3.0",
  "openrpc >= 8.1.0; python_version >= '3.9' and python_version < '3.13'",
  "uuid6 >= 2024.1.12",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "sphinx",
  "sphinx_rtd_theme",
]
openrpc = [
  "openrpc >= 8.1.0; python_version >= '3.9'",
]

[project.urls]
"Homepage" = "https://github.com/pymeasure/pyleco"
"Bug Tracker" = "https://github.com/pymeasure/pyleco/issues"

[project.scripts]
coordinator = "pyleco.coordinators.coordinator:main"
proxy_server = "pyleco.coordinators.proxy_server:main"
starter = "pyleco.management.starter:main"

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm>=8.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# write_to = "pyleco/_version.py"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
select = ["E", "F", "W"]
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pypackages__",
    "__pycache__",
    "build",
    "dist",
    "docs/conf.py",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[mypy]

[tool.coverage.run]
branch = true
omit = [
    # Omit LECO definitions
    "pyleco/errors.py",
    "pyleco/core/leco_protocols.py",
    # omit import file
    "pyleco/json_utils/rpc_server.py",
    # omit files for testing only
    "pyleco/management/test_tasks/*",
]
